Split CSS mobile code to new file

--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,7 @@
 
     <!-- Stylesheets for themes -->
     <link rel="stylesheet" type="text/css" href="theme.css">
+    <link rel="stylesheet" type="text/css" href="theme_mobile.css">
     <link rel="stylesheet" type="text/css" href="theme-dark.css" disabled id="darkStylesheet">
     <link rel="stylesheet" type="text/css" href="theme-light.css" id="lightStylesheet">
     
@@ -94,6 +95,6 @@
     <a id="emailButton" href="mailto:clarachenn1@gmail.com">
         <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/email-light.png" alt="Email Logo">
     </a>
-    
+
 </body>
 </html>
