--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
 
     <!-- Stylesheets for themes -->
     <link rel="stylesheet" type="text/css" href="theme.css">
+    <link rel="stylesheet" type="text/css" href="theme_mobile.css">
     <link rel="stylesheet" type="text/css" href="theme-dark.css" disabled id="darkStylesheet">
     <link rel="stylesheet" type="text/css" href="theme-light.css" id="lightStylesheet">
     
@@ -261,6 +262,6 @@
             window.addEventListener("scroll", checkVisibility);
         });
     </script>
-    
+
 </body>
 </html>
