--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Stylesheets for themes -->
     <link rel="stylesheet" type="text/css" href="theme.css">
     <link rel="stylesheet" type="text/css" href="theme_mobile.css">
+    <link rel="stylesheet" type="text/css" href="animations.css">
     <link rel="stylesheet" type="text/css" href="theme-dark.css" disabled id="darkStylesheet">
     <link rel="stylesheet" type="text/css" href="theme-light.css" id="lightStylesheet">
     
