Renamed main CSS file

--- a/projects.html
+++ b/projects.html
@@ -10,8 +10,8 @@
     <title>Projects</title>
 
     <!-- Stylesheets for themes -->
-    <link rel="stylesheet" type="text/css" href="theme.css">
-    <link rel="stylesheet" type="text/css" href="theme_mobile.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style_mobile.css">
     <link rel="stylesheet" type="text/css" href="animations.css">
     <link rel="stylesheet" type="text/css" href="theme-dark.css" disabled id="darkStylesheet">
     <link rel="stylesheet" type="text/css" href="theme-light.css" id="lightStylesheet">
