Edited images for about page

--- a/about.html
+++ b/about.html
@@ -164,11 +164,11 @@
                     <div id="tkd-gallery">
                         <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/tkd1.jpg" width="600" alt="Taekwondo Kicking 1">
                         <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/tkd2.jpg" width="600" alt="Taekwondo Kicking 2">
-                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/tkd3.jpg" width="600" alt="Taekwondo Image">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/tkd3.jpg" width="600" alt="Taekwondo Team">
                         <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/tkd4.jpg" width="600" alt="Taekwondo Competition">
                         <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/tkd5.jpg" width="600" alt="Taekwondo Competition Team">
-                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/tkd6.jpg" width="600" alt="Taekwondo UCI 1">
-                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/tkd7.jpg" width="600" alt="Taekwondo UCI 2">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/tkd6.jpg" width="600" alt="Taekwondo at UCI">
+                        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/tkd7.jpg" width="600" alt="Taekwondo Rumble at UCSD">
 
                         <button class="prev" onclick="prevTkdImage()">❮</button>
                         <button class="next" onclick="nextTkdImage()">❯</button>
@@ -222,7 +222,7 @@
                         speaking experience for all members.</p>
                 </div>
                 <div class="ec-image">
-                    <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/tm.jpg" class="responsive-image" alt="Gavel Club Image">
+                    <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/images/toastmasters.png" class="responsive-image" alt="Gavel Club Image">
                 </div>
             </div>
         </div>
