--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,13 @@
             <h3>LinkedIn: <a href="https://www.linkedin.com/in/clarachenn/">clarachenn</a></h3>
         </div>
     </div>
+ 
+</body>
+
+<!-- Footer -->
+<footer>
+    <!-- Copyright Text -->
+    <div id="copyrightText">© 2024 Clara Chen</div>
 
     <!-- Contact buttons -->
     <a id="githubButton" href="https://github.com/clarachenn">
@@ -67,6 +74,5 @@
     <a id="emailButton" href="mailto:clarachenn1@gmail.com">
         <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/email-light.png" alt="Email Logo">
     </a>
-
-</body>
+</footer>
 </html>
