--- a/index.html
+++ b/index.html
@@ -88,19 +88,6 @@
         </div>
     </div>
 
-    <!-- Contact buttons -->
-    <a id="githubButton" href="https://github.com/clarachenn">
-        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/github-light.png" alt="GitHub Logo">
-    </a>
-
-    <a id="linkedinButton" href="https://www.linkedin.com/in/clarachenn/">
-        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/linkedin-light.png" alt="LinkedIn Logo">
-    </a>
-
-    <a id="emailButton" href="mailto:clarachenn1@gmail.com">
-        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/email-light.png" alt="Email Logo">
-    </a>
-
     <!-- Scripts for typewriter effect and visibility check -->
     <script>
         // Script for typewriter effect
@@ -173,4 +160,23 @@
     </script>
 
 </body>
+
+<!-- Footer -->
+<footer>
+    <!-- Copyright Text -->
+    <div id="copyrightText">© 2024 Clara Chen</div>
+
+    <!-- Contact buttons -->
+    <a id="githubButton" href="https://github.com/clarachenn">
+        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/github-light.png" alt="GitHub Logo">
+    </a>
+
+    <a id="linkedinButton" href="https://www.linkedin.com/in/clarachenn/">
+        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/linkedin-light.png" alt="LinkedIn Logo">
+    </a>
+
+    <a id="emailButton" href="mailto:clarachenn1@gmail.com">
+        <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/email-light.png" alt="Email Logo">
+    </a>
+</footer>
 </html>
