--- a/projects.html
+++ b/projects.html
@@ -83,12 +83,19 @@
             </a>
         </div>
     </div>
+ 
+</body>
+
+<!-- Footer -->
+<footer>
+    <!-- Copyright Text -->
+    <div id="copyrightText">© 2024 Clara Chen</div>
 
     <!-- Contact buttons -->
     <a id="githubButton" href="https://github.com/clarachenn">
         <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/github-light.png" alt="GitHub Logo">
     </a>
-    
+
     <a id="linkedinButton" href="https://www.linkedin.com/in/clarachenn/">
         <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/linkedin-light.png" alt="LinkedIn Logo">
     </a>
@@ -96,6 +103,6 @@
     <a id="emailButton" href="mailto:clarachenn1@gmail.com">
         <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/email-light.png" alt="Email Logo">
     </a>
+</footer>
 
-</body>
 </html>
