Added custom fonts

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <link rel="stylesheet" type="text/css" href="animations.css">
     <link rel="stylesheet" type="text/css" href="theme-dark.css" disabled id="darkStylesheet">
     <link rel="stylesheet" type="text/css" href="theme-light.css" id="lightStylesheet">
-    
+
+    <!-- Stylesheets for fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Wellfleet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press Start 2P">
+
     <!-- Script for theme toggling -->
     <script src="themeToggler.js"></script>
 </head>
@@ -71,19 +76,20 @@
             <!-- Project 1 -->
             <a href="https://github.com/clarachenn/ZotRater" class="project-panel2">
                 <img src="images/zotrater.png" width="300" alt="ZotRater Image">
-                <h2>ZotRater</h2>
+                <h2 style="font-family: 'Wellfleet', Arial, sans-serif;">ZotRater</h2>
             </a>
 
             <!-- Project 2 -->
             <a href="http://mainviewcpa.com" class="project-panel2">
                 <img src="images/mv.png" width="300" alt="Mainview Image">
-                <h2>Mainview Website</h2>
+                <h2 style="font-family: 'Aclonica', Arial, sans-serif;">Mainview <br> Website</h2>
+
             </a>
 
             <!-- Project 3 -->
             <a href="https://github.com/clarachenn/corn-maze-3d-game" class="project-panel2">
                 <img src="images/cornmaze.png" width="300" alt="CornMaze Image">
-                <h2>CornMaze</h2>
+                <h2 style="font-family: 'Press Start 2P', Arial, sans-serif;">CornMaze</h2>
             </a>
         </div>
     </div>
