--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,22 @@
             <!-- LinkedIn information -->
             <h3>LinkedIn: <a href="https://www.linkedin.com/in/clarachenn/">clarachenn</a></h3>
         </div>
+
+        <h2>Contact Me</h2>
+    
+        <form action="email_form.php" method="post">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="4" required></textarea>
+
+            <button type="submit">Submit</button>
+        </form>
+
     </div>
  
 </body>
