--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
             <h3>LinkedIn: <a href="https://www.linkedin.com/in/clarachenn/">clarachenn</a></h3>
         </div>
 
-        <h2>Contact Me</h2>
+        <!-- <h2>Contact Me</h2>
     
         <form action="email_form.php" method="post">
             <label for="name">Name:</label>
@@ -67,7 +67,7 @@
             <textarea id="message" name="message" rows="4" required></textarea>
 
             <button type="submit">Submit</button>
-        </form>
+        </form> -->
 
     </div>
  
