Moved footer inside body

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Stylesheets for fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Wellfleet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press Start 2P">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press%20Start%202P">
 
     <!-- Script for theme toggling -->
     <script src="themeToggler.js"></script>
@@ -165,8 +165,6 @@
 
     </script>
 
-</body>
-
 <!-- Footer -->
 <footer>
     <!-- Copyright Text -->
@@ -185,4 +183,7 @@
         <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/contact-buttons/email-light.png" alt="Email Logo">
     </a>
 </footer>
+
+</body>
+
 </html>
