--- a/projects.html
+++ b/projects.html
@@ -46,6 +46,23 @@
 
         <!-- Project container with individual project panels -->
         <div class="project-container">
+            <!-- Project panel for QuickSearch -->
+            <a href="https://github.com/clarachenn/QuickSearch" class="project-panel">
+                <h2>QuickSearch</h2>
+                <p>QuickSearch is a powerful and efficient search engine designed to handle tens of 
+                    thousands of documents, providing results in under 200ms. It uses sophisticated indexing 
+                    algorithms to ensure rapid organization and retrieval of information.</p>
+            </a>
+                        
+            <!-- Project panel for Sleepify -->
+            <a href="https://github.com/clarachenn/Sleepify" class="project-panel">
+                <h2>Sleepify</h2>
+                <p>Sleepify is a user-friendly app designed to help users monitor their sleep 
+                    patterns and track sleepiness levels throughout the day. The app provides 
+                    valuable insights to improve sleep quality by logging sleep hours, daily 
+                    sleepiness, and offering reminders to ensure consistent tracking.</p>
+            </a>
+            
             <!-- Project panel for ZotRater -->
             <a href="https://github.com/clarachenn/ZotRater" class="project-panel">
                 <h2>ZotRater</h2>
@@ -57,12 +74,12 @@
             </a>
 
             <!-- Project panel for Personal Website -->
-            <a href="https://github.com/clarachenn/clarachenn.github.io" class="project-panel">
+            <!-- <a href="https://github.com/clarachenn/clarachenn.github.io" class="project-panel">
                 <h2>Personal Website</h2>
                 <p>My personal website is where I showcase my portfolio of projects, providing 
                     visitors with a glimpse into my skills and passions. Users can explore my 
                     work and learn more about my background, skills, and experiences.</p>
-            </a>
+            </a> -->
 
             <!-- Project panel for Mainview Website -->
             <a href="http://mainviewcpa.com" class="project-panel">
