--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
 
             <!-- Experience panels with details about roles and responsibilities -->            
             <div class="experience-panel">
-                <div class="icssc-logo">
+                <div class="dbh-logo">
                     <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/logos/hack.jpg" alt="Hack at UCI Logo">
                 </div>
                 <h3>Corporate Organizer</h3>
@@ -112,7 +112,7 @@
             </div>
             
             <div class="experience-panel">
-                <div class="icssc-logo">
+                <div class="dbh-logo">
                     <img src="https://raw.githubusercontent.com/clarachenn/clarachenn.github.io/main/logos/vh.png" alt="VenusHacks Logo">
                 </div>
                 <h3>Corporate Co-Chair</h3>
