--- a/projects.html
+++ b/projects.html
@@ -81,14 +81,14 @@
                     work and learn more about my background, skills, and experiences.</p>
             </a> -->
 
-            <!-- Project panel for Mainview Website -->
+            <!-- Project panel for Mainview Website
             <a href="http://mainviewcpa.com" class="project-panel">
                 <h2>Mainview Website</h2>
                 <p>Mainview CPA Inc. is a professional accounting firm. The website is 
                     thoughtfully designed with a user-friendly interface, ensuring that 
                     visitors can effortlessly access essential details about the firm, 
                     including the diverse array of accounting services offered.</p>
-            </a>
+            </a> -->
 
             <!-- Project panel for CornMaze -->
             <a href="https://github.com/clarachenn/corn-maze-3d-game" class="project-panel">
